updated imports to be explicit and added checkstyle rule to forbid * imports